# proyecto_final

DunkOfDoom executable/: DunkOfDoom_resource.rc  Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
DunkOfDoom executable/.qtc_clangd/: compile_commands.json
DunkOfDoom executable/.qtc_clangd/.cache/clangd/index/: ball.cpp.2C4794FE9F1142E8.idx  ball.h.69635F5BDE56ACA1.idx  ballsprites.cpp.C147931D6DE28C4F.idx  ballsprites.h.6AB9329D68812F84.idx  boss.cpp.BF04A5769326A31D.idx  boss.h.16141CEC21ED2E87.idx  boss_sprites.cpp.3F804ACE969E9039.idx  boss_sprites.h.9B96AB9D7A4E3A98.idx  character.cpp.670C008ABAC11EE4.idx  character.h.ECB112CE12CD94B2.idx  config.h.04CADF7E185F2E5B.idx  enemy.cpp.524210FDF7DC3A75.idx  (+61 more)
DunkOfDoom executable/debug/: object_script.DunkOfDoom.Debug
DunkOfDoom executable/release/: moc_mainwindow.cpp  object_script.DunkOfDoom.Release
Juego/: CMakeLists.txt  main.cpp  player.h
momento-2/: diagrama de clase Largo.docx
momento_3/: Informe de responsabilidades Desafíos Info II.docx
momento_3/DunkOfDoom/: DunkOfDoom.pro  assets.qrc  ball.cpp  ball.h  ballsprites.cpp  ballsprites.h  boss.cpp  boss.h  boss_sprites.cpp  boss_sprites.h  character.cpp  character.h  config.h  enemy.cpp  enemy.h  hud_sprites.cpp  hud_sprites.h  juego.cpp  juego.h  lava.cpp  lava.h  lavasprites.cpp  lavasprites.h  level.cpp  level.h  level_1.cpp  level_1.h  level_2.cpp  level_2.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  obstacle.cpp  obstacle.h  player.cpp  player.h  player_sprites.cpp  player_sprites.h  player_stub.h  powerup.cpp  (+9 more)
